--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Listing Github Repositories</title>
   </head>
+  <style type="text/css">
+  .list-item {
+     padding: 15px 20px;
+     margin-bottom: 5px;
+  }
+  </style>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
